--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,12 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       name: Configure pip caching
       with:
         path: ~/.cache/pip
@@ -23,7 +23,7 @@ jobs:
           ${{ runner.os }}-pip-${{ matrix.python-version }}-
     - name: Install dependencies
       run: |
-        pip install -e '.[test,mypy,flake8]]'
+        pip install -e '.[test,mypy,flake8]'
     - name: Run tests
       run: |
         pytest -v
