document env variables, remove unused code

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
-DISCORD_SECRET=""
+# source for scraping
 DISCORD_GUILD_IDS=""
 DISCORD_FORUM_IDS=""
+
+# for bot interaction
 DISCORD_TESTING_GUILD_ID=""
 DISCORD_STATUS_CHANNEL_ID=""
-DB_PATH="data/mydb.db"
+
+# your Discord bot secret token from https://discord.com/developers/applications
+DISCORD_SECRET=""
+
+# OpenAI secret key for rephrasing of questions & answers
 OPENAI_API_KEY=""
