--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,6 @@
 [mypy]
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+
+[mypy-sentence_transformers]
 ignore_missing_imports = True
